--- a/public/index.html
+++ b/public/index.html
@@ -826,5 +826,14 @@
     </div>
 
     <script src="app.js"></script>
+    <h1>Welcome to My App</h1>
+    
+    <div id="notifications-area">
+        <h2>Real-Time Notifications</h2>
+        <div id="notifications-list">
+            </div>
+    </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
