--- a/public/index.html
+++ b/public/index.html
@@ -746,6 +746,10 @@
                         <input type="date" id="reminderDate" class="form-input">
                     </div>
                     <div class="form-group">
+                        <label for="reminderTime">Time:</label>
+                        <input type="time" id="reminderTime" class="form-input" value="09:00">
+                    </div>
+                    <div class="form-group">
                         <label for="reminderNotes">Notes (optional):</label>
                         <input type="text" id="reminderNotes" class="form-input" placeholder="Additional notes...">
                     </div>
@@ -826,14 +830,5 @@
     </div>
 
     <script src="app.js"></script>
-    <h1>Welcome to My App</h1>
-    
-    <div id="notifications-area">
-        <h2>Real-Time Notifications</h2>
-        <div id="notifications-list">
-            </div>
-    </div>
-    
-    <script src="script.js"></script>
 </body>
 </html>
